# surgengine

./: .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  compile_commands.json  meson.build
src/: CMakeLists.txt  kernel.cu  kernel.h  main.cpp  meson.build
src/core/: device.cuh  device.hpp  model_config.hpp  storage.cuh  tensor.cuh  tensor_shape.hpp
src/core/nn/: init.cuh  linear_layer.cpp  linear_layer.cuh  module.cpp  module.cuh  parameter.cuh
src/kernels/: fill_kernel.cu  fill_kernel.hpp  init_kernels.cu  init_kernels.hpp  meson.build
src/server/: listener.hpp  request_handler.hpp  server.hpp  session.hpp
src/utils/: cblas_utils.hpp  cuda_utils.cuh
tests/: CMakeLists.txt  cuda_test_utils.h  meson.build  test_device.cpp  test_linear_layer.cu  test_module.cu  test_parameter.cu  test_storage.cu  test_tensor.cu
